[tool.poetry]
name = "wf"
version = "0.1.0"
description = "Watches files for changes and runs whatever cli command you specify"
authors = ["tulimenot"]
license = "BSD 2-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pydocstyle = "^6.1.1"
mypy = "^0.991"
autopep8 = "^2.0.0"

[tool.poetry.scripts]
wf = "wf:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy] 
check_untyped_defs = true
disallow_any_generics = true 
ignore_missing_imports = true 
no_implicit_optional = true 
show_error_codes = true 
strict_equality = true 
warn_redundant_casts = true 
warn_return_any = true 
warn_unreachable = true 
warn_unused_configs = true 
no_implicit_reexport = true